Fix problems with indexes and bugs with beer endpoints
