# controllers/beer.js
@@ -1,5 +1,5 @@
 const config = require('config');
-const debug = require('debug')('BEER:User');
+const debug = require('debug')('BEER:beer');
 const validator = require('validator');
 const { Beer } = require('../models');
 
@@ -9,7 +9,7 @@ module.exports.getBeers = async (req, res, next) => {
   try {
     if (!apiKey) throw '400';
     const beers = await Beer(config.get('ddbb'))
-      .getBeers(search, limit);
+      .getBeers(search, limit, apiKey);
     return res.status(201).json({ success: true, beers });
   } catch (e) {
     debug(e);
@@ -21,10 +21,10 @@ module.exports.getBeer = async (req, res, next) => {
   const apiKey = req.headers['x-api-key'];
   const { id } = req.params;
   try {
-    if (!id || !apiKey) throw '400';
+    if (!id || !apiKey || isNaN(Number(id))) throw '400';
     const beer = await Beer(config.get('ddbb'))
-      .getBeer(id);
-    return res.status(201).json({ success: true, beer });
+      .getBeer(Number(id), apiKey);
+    return res.status(200).json({ success: true, beer });
   } catch (e) {
     debug(e);
     return next(new Error(e));
@@ -35,10 +35,10 @@ module.exports.addLike = async (req, res, next) => {
   const apiKey = req.headers['x-api-key'];
   const { id } = req.params;
   try {
-    if (!id || !apiKey) throw '400';
+    if (!id || !apiKey || isNaN(Number(id))) throw '400';
     const beer = await Beer(config.get('ddbb'))
-      .addLike(id);
-    return res.status(201).json({ success: true, beer });
+      .addLike(Number(id), apiKey);
+    return res.status(202).json({ success: true, beer });
   } catch (e) {
     debug(e);
     return next(new Error(e));
@@ -50,10 +50,10 @@ module.exports.addComment = async (req, res, next) => {
   const { id } = req.params;
   const { comment } = req.body;
   try {
-    if (!id || !comment || !apiKey) throw '400';
+    if (!id || !comment || !apiKey || isNaN(Number(id))) throw '400';
     const beer = await Beer(config.get('ddbb'))
-      .addLike(id, apiKey, comment);
-    return res.status(201).json({ success: true, beer });
+      .addComment(Number(id), apiKey, comment);
+    return res.status(202).json({ success: true, beer });
   } catch (e) {
     debug(e);
     return next(new Error(e));
